sandbox-codebase/objects/Study_Notes_Change_Log__c/Study_Notes_Change_Log__c.object-meta.xml
<CustomObject>
    <description>Captures changes to long text field like notes</description>
    <label>Study Notes Change Log</label>
    <nameField>
        <label>Study Note Change Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study_Notes_Change_Logs__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>