sandbox-codebase/objects/Study_Notes_Change_Log__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>