sandbox-codebase/objects/Study_Notes_Change_Log__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>