sandbox-codebase/objects/Study_Notes_Change_Log__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study</label>
    <referenceTo>Study__c</referenceTo>
    <relationshipLabel>Study Notes Change Logs</relationshipLabel>
    <relationshipName>Study_Notes_Change_Logs_c</relationshipName>
    <type>Lookup</type>
</CustomField>